Fix: Rid of overflow white space in media queries, new breakpoints

--- a/styles/media.css
+++ b/styles/media.css
@@ -1,4 +1,4 @@
-@media(max-width: 400px) {
+@media(max-width: 540px) {
   body > main {
     display: flex;
     flex-direction: column;
@@ -32,7 +32,11 @@
   }
 }
 
-@media(min-width: 600px) {
+@media(min-width: 550px) {
+  html, body {
+    overflow-x: hidden;
+  }
+
   body > main {
     display: grid;
     grid-gap: 1em;
